<resources>
    <string name="app_name">ReadIsWhatILove</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="direcci_n_de_correo_electr_nico">Dirección de correo electrónico</string>
    <string name="constrase_a">Constraseña</string>
    <string name="crear_cuenta">crear cuenta</string>
    <string name="has_olvidado_la_contrase_a">Has olvidado la contraseña?</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clientID">426405697865-luhj6dst71rbmml1ne5gldnebk4u1ksc.apps.googleusercontent.com</string>
    <string name="add_favoritos">Añade este libro a favoritos</string>
    <string name="bienvenido">Bienvenido a Read Is What I Love!   Para continuar, necesitamos acceso a tu cuenta de Google. Pulsa el botón de abajo para empezar a explorar libros.</string>
    <string name="explicacion_login">Read Is What I Love utiliza tu cuenta de Google para guardar tus libros favoritos.</string>
    <string name="titulo_app">Read is what I Love</string>
    <string name="portada_book">portada_book</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="starred">Starred</string>
    <string name="settings">Settings</string>
</resources>
