<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bertiwi.readiswhatilove.Authentication.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:text="Ridu is laifu"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/et_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="70dp"
                android:alpha="0.5"
                android:background="@drawable/editext_login_border_cuadrat"
                android:gravity="center_horizontal"
                android:hint="@string/direcci_n_de_correo_electr_nico"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:alpha="0.5"
                android:background="@drawable/editext_login_border_cuadrat"
                android:gravity="center_horizontal"
                android:hint="@string/constrase_a"
                android:inputType="textPassword"
                android:padding="10dp" />

            <Button
                android:id="@+id/bt_register_crear_cuenta"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="40dp"
                android:background="#7C4DFF"
                android:outlineProvider="bounds"
                android:text="@string/crear_cuenta"
                android:textColor="#fff" />


        </LinearLayout>
    </ScrollView>

</FrameLayout>
